# seastar_bazel

./: .bazelrc  .clang-tidy  .gitignore  BUILD  COPYING.txt  MODULE.bazel  README.md  WORKSPACE  compile_flags.txt  seastar.bzl  seastar_archive.bzl  seastar_deps.bzl  seastar_deps_bzlmod.bzl
examples/: BUILD  main.cc
